fix: fixed verticle alignment for social btn icons

--- a/wp-app/wp-content/themes/attract/assets/style/global/global.scss
+++ b/wp-app/wp-content/themes/attract/assets/style/global/global.scss
@@ -255,6 +255,7 @@ section {
 
 .socials-btns {
     display: flex;
+    align-items: center;
     flex-wrap: wrap;
     gap: 19px;
     &__link {        
